<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/ds_col_7">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"
        app:srcCompat="@drawable/logo" />


    <!--email-->
    <com.dspread.demoui.widget.ClearableEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg_selector"
        android:hint="@string/all_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="16sp" />

    <!--pwd-->
    <com.dspread.demoui.widget.ClearableEditText
        android:id="@+id/edit_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg_selector"
        android:hint="@string/all_password"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16sp" />
    <!--phone-->
    <com.dspread.demoui.widget.ClearableEditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg_selector"
        android:hint="@string/all_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:textColor="@color/ds_col_8"
        android:textSize="16sp" />


    <!--company-->
    <com.dspread.demoui.widget.ClearableEditText
        android:id="@+id/edit_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg_selector"
        android:hint="@string/company"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16sp" />



    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:background="@drawable/login_blue_button"
        android:stateListAnimator="@null"
        android:text="@string/sign_up"
        android:textColor="@color/bg_red"
        android:textSize="14sp"
        android:textAllCaps="true"/>




</LinearLayout>